fixed missing color styling for popup box

--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,7 @@ button {
     height: 100%;
     z-index: 2;
     width: 100%;
-    background: rgba(0, 0, 0, 0.4);
+    background: var(--primaryColor);
 }
 
 .popup-box .popup{
@@ -155,21 +155,21 @@ button {
 .popup .content{
     width: calc(100% - 15px);
     border-radius: 5px;
-    background: #fff;
+    background: var(--secondaryColor);
 }
 
 .popup .content header{
     padding: 15px 25px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--secondaryText);
 }
 
 .content header p{
+    color: var(--primaryText);
     font-size: 20px;
     font-weight: 500;
 }
 
 .content header i{
-    color: #575757;
     cursor: pointer;
     font-size: 20px;
 }
@@ -183,6 +183,7 @@ button {
 }
 
 form .row label{
+    color: var(--primaryText);
     display: block;
     font-size: 18px;
     margin-bottom: 6px;
@@ -195,7 +196,9 @@ form .row label{
     font-size: 17px;
     padding: 0 15px;
     border-radius: 4px;
-    border: 1px solid #999;
+    color: var(--primaryText);
+    background-color: var(--secondaryColor);
+    border: 1px solid var(--secondaryText);
 }
 
 .content form textarea{
@@ -210,7 +213,7 @@ form .row label{
     border: none;
     outline: none;
     border-radius: 5px;
-    color: #fff;
+    color: white;
     font-size: 17px;
     background: var(--accentColor);
 }
